--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^5.0.1",
     "redux-actions": "^3.0.3",
     "redux-saga": "^1.3.0",
+    "reselect": "^5.1.1",
     "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4"
   },
